# trajectory_task

./: .env  .gitignore  Makefile  README.md  pyproject.toml
src/: exeptions.py  main.py  models.py
src/vehicle_manager/: __init__.py  api.py  manager.py
tests/: conftest.py  test_vehicle_manager.py
