[tool.poetry]
name = "trajectory-task"
version = "0.1.0"
description = ""
authors = ["Pololoshka <sokolova.polya.98gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
requests-mock = "^1.11.0"
ruff = "*"
mypy = "*"
python-dotenv = "^1.0.1"
types-requests = "^2.31.0.20240406"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
extend-exclude = [".venv"]
line-length = 100


[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/#error-e
select = [
    "E",   # Error
    "F",   # Pyflakes
    "I",   # Isort
    "N",   # pep8-naming
    "S",   # flake8-bandit
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ICN", # flake8-import-conventions
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "SIM", # flake8-simplify
    "C90", # mccabe for complexicty
    "UP",  # pyupgrade
]


[tool.ruff.lint.extend-per-file-ignores]
"test*" = [
    "S101", # Allow use of asserts
    "E501", # Unlimited line length
]
